--- a/index.html
+++ b/index.html
@@ -14,7 +14,121 @@
 
 <body>
 
-  Mike Kivikoski, designer and developer
+  <header>
+    <h1>Hi! I&rsquo;m Mike Kivikoski</h1>
+  </header>
+
+  <main>
+    <section>
+      <h2>
+        I focus on easy to use, device agnostic, accessible experiences.
+      </h2>
+
+      <h3>
+        With a formal background in design, and 11 years of work experience in development, I help connect the dots from Problem identification all the way through User Research, Interviews, Testing, UX Flows, Visual Design, UI development and integration. I’ve been fortunate enough to work on multi-million dollar projects, speak at conferences around the States, and seen products I’ve worked on get shipped to literally millions of users.
+      </h3>
+
+      <p>
+        I&rsquo;ve worked remote for the past 3 years, while being full time employed at Cantina. Prior to that I spent 5 years running my own consulting shop. Communication and transparency are two skills I’ve learned over that time, and ones that I treasure.
+      </p>
+
+      <p>
+        A few years ago, I was given the opportunity to release a video series with O’Reilly Media, “UI Development for Engineers”, that gives a quick introduction to design and front end development to developers unfamiliar with those concepts – and it is still being purchased to this day.
+      </p>
+    </section>
+
+    <section>
+      <h3>One of my favorite talks I&rsquo;ve given</h3>
+      Evolving Web Applications with Module Based Design Components
+
+      https://www.youtube.com/watch?v=ev3AtyAlwIQ
+    </section>
+    <section>
+      [ Want to chat? Drop me an email, <a href="mailto:mikekivikoski@gmail.com" title="Email Mike">mikekivikoski@gmail.com</a> and we can setup a zoom. ]
+    </section>
+    <section>
+      <h3>Work</h3>
+      <p>I&rsquo;ve been fortunate to have worked on projects with user base of more than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions. </p>
+
+      <h4>What I really enjoy doing</h4>
+      <ul>
+        <li>User and Project Research</li>
+        <li>User Interviews</li>
+        <li>User Flows</li>
+        <li>Design Sprints</li>
+        <li>Visual design</li>
+        <li>Design systems</li>
+        <li>HTML, CSS / Sass (prototypes and production code)</li>
+        <li>CSS architecture</li>
+        <li>Accessibility</li>
+        <li>Performance</li>
+      </ul>
+
+
+      <h4>What I can sorta do/kind of understand</h4>
+      <ul>
+        <li>Presentational JavaScript</li>
+        <li>Build systems (webpack, gulp)</li>
+        <li>npm modules</li>
+        <li>CRUD</li>
+        <li>e2e and unit tests</li>
+      </ul>
+
+      <h4>What you don&rsquo;t want me doing</h4>
+      <ul>
+        <li>Writing Middleware</li>
+        <li>Writing backend logic</li>
+        <li>Architecting anything beyond the CSS architecture</li>
+      </ul>
+
+      <p>I have experience working within applications written in various languages, in no particular order, including: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
+
+    </section>
+
+    <section>
+      <h3>Selected media</h3>
+      <ul>
+        <li><a href="http://shop.oreilly.com/product/0636920035251.do" title="">O’Reilly books, “UI Introduction for Engineers”</a> </li>
+        <li><a href="https://www.youtube.com/watch?v=Sm_60YPrPzk" title="">Cantina Workshop: Legitimizing Design Thinking in Large Organizations</a></li>
+        <li><a href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="">CascadiaJS</a></li>
+        <li><a href="https://html5devconf.com/speakers/mike_kivikoski.html" title="">HTML5 Developer Conference</a></li>
+        <li><a href="https://creativetechweek2016.sched.com/speaker/mike_kivikoski.1uoz3m3j" title="">NYC Creative Tech Week</a></li>
+        <li><a href="https://www.youtube.com/watch?v=rPDJcQGrKIg" title="">BostonCSS</a> </li>
+        <li><a href="http://greatwideopen.org/speakers/mike-kivikoski/" title="">Great Wide Open</a></li>
+        <li><a href="https://www.youtube.com/watch?v=ev3AtyAlwIQ" title="">Full Stack Toronto</a></li>
+        <li><a href="https://www.meetup.com/fullstacknh/events/223108477/?_cookie-check=zzTo2tS-Gm06k7eu" title="">Full Stack NH</a></li>
+        <li><a href="https://vimeo.com/41222601" title="">Creative Mornings</a></li>
+        <li></li>
+        <li>I occasionally post podcasts at for Design, Build, Test, Repeat at <a href="http://dbtr.fm" title="Design, Build, Test, Repeat podcast">dbtr.fm</a></li>
+      </ul>
+    </section>
+
+
+    <section>
+      <h3>Articles and thoughts</h3>
+      <ul>
+        <li><a href="https://cantina.co/design-first-thinking-in-large-organizations/" title="">Design First thinking in Large Organizations</a></li>
+        <li><a href="https://cantina.co/organizational-buy-in-on-responsive-design/" title="">Organizational Buy In On Responsive Design</a></li>
+        <li><a href="https://cantina.co/modular-css-atomic-design-in-the-enterprise/" title="">modular-css-atomic-design-in-the-enterprise</a></li>
+        <li><a href="https://cantina.co/delivering-responsive-at-scale/" title="">delivering-responsive-at-scale</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/lets-make-user-testing-even-easier-b828d354fe81" title="">Let’s make user testing even easier</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/dark-patterns-ruin-great-services-b81aae4b081b" title="">Dark Patterns Ruin Great Services</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/creating-a-podcast-f8d6b1057c8c" title="">Creating a Podcast</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/abc-always-be-continuous-integration-d3a3cb4da419" title="">Abc – Always Be Continuous integration</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/laying-out-the-foundation-on-a-new-project-d4d76a6c93a3" title="">Laying the foundation for a new project</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/an-easier-way-to-find-users-for-user-testing-on-new-products-e2491d0bfdaf" title="">An easier way to find users for user testing</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/spend-1-save-99-3ecc3703f6e2" title="">Spend $1, Save $99</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/failure-30e09cc3f357" title="">Failure</a></li>
+        <li><a href="https://medium.com/@mikekivikoski/ideal-employment-2b2c61c626eb" title="">Ideal Employment</a></li>
+      </ul>
+    </section>
+
+    <section>
+      [My second child was born in early 2016, and time outside of work has been used for family time. This is why you’ll notice a decrease in my writing and speaking content. ]
+    </section>
+
+  </main>
+
 
 </body>
 
