updates to content, beginning of playing with layout and emojis

--- a/index.html
+++ b/index.html
@@ -8,105 +8,127 @@
 
   <title>Mike Kivikoski</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/main.css">
   <link rel="icon" href="ted-excellent.gif">
 </head>
 
-<body>
+<body class="kivikoski-says-hello-👋">
 
-  <header>
-    <h1>Hi! I&rsquo;m Mike Kivikoski</h1>
+  <header class="who-are-you-🐛">
+    <h6 class="who-are-you-🐛__say-hi">
+      Hi! 👋
+      <span class="who-are-you-🐛__your-name-please">
+        I&rsquo;m Mike Kivikoski
+      </span>
+    </h6>
   </header>
 
   <main>
-    <section>
-      <h2>
-        I focus on easy to use, device agnostic, accessible experiences.
+    <section class="quick-summary-🎉">
+      <h1 class="headline--main">
+        Focusing on easy to use, device agnostic, accessible experiences.
+      </h1>
+
+      <h2 class="headline--major">
+        With a formal background in design, and 11 years of work experience in development, I help create and connect the dots from <b>Problem identification</b> through <b>User Research</b>, <b>Interviews</b>, <b>Testing</b>, <b>UX Flows</b>, <b>Visual Design</b>, <b>UI development</b> and <b>Code integration</b>.
+        I&rsquo;ve been fortunate enough to work on multi-million dollar projects, speak at conferences around the States, and have seen dozens of products I&rsquo;ve worked on get shipped to literally millions of users.🚢
       </h2>
 
-      <h3>
-        With a formal background in design, and 11 years of work experience in development, I help connect the dots from Problem identification all the way through User Research, Interviews, Testing, UX Flows, Visual Design, UI development and integration. I’ve been fortunate enough to work on multi-million dollar projects, speak at conferences around the States, and seen products I’ve worked on get shipped to literally millions of users.
-      </h3>
-
       <p>
-        I&rsquo;ve worked remote for the past 3 years, while being full time employed at Cantina. Prior to that I spent 5 years running my own consulting shop. Communication and transparency are two skills I’ve learned over that time, and ones that I treasure.
+        I&rsquo;ve worked remote for the past few years, while being full time employed at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, so Slack and I are old pals.
+        Gifs, puns and emojis &mdash; especially animated ones take from clips of &lsquo;90s movies &mdash; are my favorite (peep Ted in the favicon if your browser supports it). I&rsquo;ve got my own private office space in my house in New Hampshire and use a Jarvis standing desk daily, paired with a 27" monitor.
       </p>
 
       <p>
-        A few years ago, I was given the opportunity to release a video series with O’Reilly Media, “UI Development for Engineers”, that gives a quick introduction to design and front end development to developers unfamiliar with those concepts – and it is still being purchased to this day.
+         Prior to Cantina, I spent 5 years running my own lil&rsquo; consulting shop out of a collective workspace in Somerville, MA. Communication and transparency are two skills I learned over that time, and ones that I treasure.
+      </p>
+
+      <p>
+        A few years ago, I was given the opportunity to release a video series with O&rsquo;Reilly Media, &ldquo;<a href="http://shop.oreilly.com/product/0636920035251.do" title="">UI Development for Engineers</a>&rdquo;, that gives a quick introduction to design and front end development to developers unfamiliar with those concepts &mdash; and it is still being purchased to this day.
+      </p>
+
+      <p>
+        I&rsquo;ve also taught at the college level, teaching, Introduction to Web Design, Introduction to Web Development, and Advanced Web Development, at Endicott College, my alma mater, during the 2012 &dash; 2014 in Beverly, MA.
       </p>
     </section>
 
-    <section>
-      <h3>One of my favorite talks I&rsquo;ve given</h3>
-      Evolving Web Applications with Module Based Design Components
+    <section class="notification-📬">
+      Want to chat? I&rsquo;d love to hear from you, so send me an email 📬, <a href="mailto:mikekivikoski@gmail.com" title="Email Mike">mikekivikoski@gmail.com</a> and we can setup a zoom.
+    </section>
 
-      https://www.youtube.com/watch?v=ev3AtyAlwIQ
-    </section>
-    <section>
-      [ Want to chat? Drop me an email, <a href="mailto:mikekivikoski@gmail.com" title="Email Mike">mikekivikoski@gmail.com</a> and we can setup a zoom. ]
-    </section>
     <section>
       <h3>Work</h3>
-      <p>I&rsquo;ve been fortunate to have worked on projects with user base of more than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions. </p>
+      <p>I&rsquo;ve been fortunate to have worked on projects with user bases greater than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions. </p>
 
-      <h4>What I really enjoy doing</h4>
-      <ul>
-        <li>User and Project Research</li>
-        <li>User Interviews</li>
-        <li>User Flows</li>
-        <li>Design Sprints</li>
-        <li>Visual design</li>
-        <li>Design systems</li>
-        <li>HTML, CSS / Sass (prototypes and production code)</li>
-        <li>CSS architecture</li>
-        <li>Accessibility</li>
-        <li>Performance</li>
-      </ul>
+      <div class="what-mike-likes-👨‍💻 grid--three-column">
+        <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-good-at">
+          <h4>What I&rsquo;m good at and enjoy</h4>
+          <ul>
+            <li>User and Project Research</li>
+            <li>User Interviews</li>
+            <li>User Flows</li>
+            <li>Design Sprints</li>
+            <li>Visual design</li>
+            <li>Design systems</li>
+            <li>HTML, CSS / Sass (prototype and production)</li>
+            <li>CSS architecture</li>
+            <li>Accessibility</li>
+            <li>Performance</li>
+            <li>Typography</li>
+          </ul>
+        </div>
 
+        <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-okay-at">
+          <h4>What I can sorta do/kind of understand</h4>
+          <ul>
+            <li>Presentational JavaScript</li>
+            <li>Build systems (webpack, gulp)</li>
+            <li>npm modules</li>
+            <li>CRUD</li>
+            <li>e2e and unit tests</li>
+            <li>Content writing</li>
+          </ul>
+        </div>
 
-      <h4>What I can sorta do/kind of understand</h4>
-      <ul>
-        <li>Presentational JavaScript</li>
-        <li>Build systems (webpack, gulp)</li>
-        <li>npm modules</li>
-        <li>CRUD</li>
-        <li>e2e and unit tests</li>
-      </ul>
+        <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-bad-at">
+          <h4>What you don&rsquo;t want me doing</h4>
+          <ul>
+            <li>Writing Middleware or lots of JavaScript from scratch</li>
+            <li>Writing backend logic</li>
+            <li>Architecting anything beyond the CSS architecture</li>
+          </ul>
+        </div>
+      </div>
 
-      <h4>What you don&rsquo;t want me doing</h4>
-      <ul>
-        <li>Writing Middleware</li>
-        <li>Writing backend logic</li>
-        <li>Architecting anything beyond the CSS architecture</li>
-      </ul>
-
-      <p>I have experience working within applications written in various languages, in no particular order, including: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
+      <p>While I work in the front-end/user interface of products, I have experience working within applications written in various languages and frameworks. Including, in no particular order: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
 
     </section>
 
     <section>
-      <h3>Selected media</h3>
-      <ul>
-        <li><a href="http://shop.oreilly.com/product/0636920035251.do" title="">O’Reilly books, “UI Introduction for Engineers”</a> </li>
+      <h3>Selected talks, workshops, podcasts and media</h3>
+      <ul class="mike-talks-🎤 grid--three-column">
+        <li><a href="http://shop.oreilly.com/product/0636920035251.do" title="">O&rsquo;Reilly books, &ldquo;UI Introduction for Engineers&rdquo;</a> </li>
         <li><a href="https://www.youtube.com/watch?v=Sm_60YPrPzk" title="">Cantina Workshop: Legitimizing Design Thinking in Large Organizations</a></li>
-        <li><a href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="">CascadiaJS</a></li>
-        <li><a href="https://html5devconf.com/speakers/mike_kivikoski.html" title="">HTML5 Developer Conference</a></li>
-        <li><a href="https://creativetechweek2016.sched.com/speaker/mike_kivikoski.1uoz3m3j" title="">NYC Creative Tech Week</a></li>
-        <li><a href="https://www.youtube.com/watch?v=rPDJcQGrKIg" title="">BostonCSS</a> </li>
-        <li><a href="http://greatwideopen.org/speakers/mike-kivikoski/" title="">Great Wide Open</a></li>
-        <li><a href="https://www.youtube.com/watch?v=ev3AtyAlwIQ" title="">Full Stack Toronto</a></li>
-        <li><a href="https://www.meetup.com/fullstacknh/events/223108477/?_cookie-check=zzTo2tS-Gm06k7eu" title="">Full Stack NH</a></li>
-        <li><a href="https://vimeo.com/41222601" title="">Creative Mornings</a></li>
-        <li></li>
-        <li>I occasionally post podcasts at for Design, Build, Test, Repeat at <a href="http://dbtr.fm" title="Design, Build, Test, Repeat podcast">dbtr.fm</a></li>
+        <li><a href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="">CascadiaJS &mdash; CSS Pseudo</a> (<a href="https://speakerdeck.com/mkivikoski/css-pseudo" title="View the slides on speakerdeck.com for CSS Pseudo">Slides</a>)</li>
+        <li><a href="https://html5devconf.com/speakers/mike_kivikoski.html" title="">HTML5 Developer Conference &mdash; Evolving Web Applications with Module Components</a></li>
+        <li><a href="https://creativetechweek2016.sched.com/speaker/mike_kivikoski.1uoz3m3j" title="">NYC Creative Tech Week  &mdash; Evolving Web Applications with Module Components</a></li>
+        <li><a href="https://www.youtube.com/watch?v=rPDJcQGrKIg" title="">BostonCSS &mdash; CSS Pseudo</a> </li>
+        <li><a href="http://greatwideopen.org/speakers/mike-kivikoski/" title="">Great Wide Open &mdash; Evolving Web Applications with Module Components</a></li>
+        <li><a href="https://www.youtube.com/watch?v=ev3AtyAlwIQ" title="">Full Stack Toronto &mdash; Evolving Web Applications with Module Components</a></li>
+        <li><a href="https://www.meetup.com/fullstacknh/events/223108477/?_cookie-check=zzTo2tS-Gm06k7eu" title="">Full Stack NH &mdash; Design in the browser</a></li>
+        <li><a href="https://vimeo.com/41222601" title="">Creative Mornings &mdash; Taking the plunge, quit your job for self employment</a></li>
+        <li><a href="https://www.youtube.com/watch?v=VHs7n4xFO4w" title="">Boston Ignite &mdash; Taking the plunge, quit your job for self employment</a></li>
       </ul>
+
+      <p>I occasionally post podcasts for Design, Build, Test, Repeat at <a href="http://dbtr.fm" title="Design, Build, Test, Repeat podcast">dbtr.fm</a></p>
     </section>
 
 
     <section>
       <h3>Articles and thoughts</h3>
-      <ul>
+      <ul class="grid--three-column">
         <li><a href="https://cantina.co/design-first-thinking-in-large-organizations/" title="">Design First thinking in Large Organizations</a></li>
         <li><a href="https://cantina.co/organizational-buy-in-on-responsive-design/" title="">Organizational Buy In On Responsive Design</a></li>
         <li><a href="https://cantina.co/modular-css-atomic-design-in-the-enterprise/" title="">modular-css-atomic-design-in-the-enterprise</a></li>
@@ -123,13 +145,22 @@
       </ul>
     </section>
 
-    <section>
-      [My second child was born in early 2016, and time outside of work has been used for family time. This is why you’ll notice a decrease in my writing and speaking content. ]
+    <section class="footnote">
+      <p>My second child 👨‍👩‍👦‍👦  was born in early 2016, and time outside of work has been used for family time. This is why you&rsquo;ll notice a decrease in my writing and speaking content since then.</p>
     </section>
 
+    <footer>
+      <h3>Get in touch, or follow me, or whatevers</h3>
+      <ul>
+        <li><a href="https://twitter.com/mkivikoski">Twitter &mdash; @mkivikoski</a></li>
+        <li><a href="https://github.com/mkivikoski/">Github &mdash; mkivikoski</a></li>
+        <li><a href="https://dribbble.com/mkivikoski">Dribbble &mdash; mkivikoski</a></li>
+        <li><a href="mailto:mikekivikoski@gmail.com">Email &mdash; mikekivikoski@gmail.com</a></li>
+      </ul>
+
+      <p>I used to own mikekivikoski.com, but let it lapse and it got scooped up by some random company 🤦‍♂️. Thus, mkivikoski.com
+    </footer>
   </main>
-
-
 </body>
 
 </html>
