fix missing p tag in footer, add PR request, add simple Readme content

--- a/index.html
+++ b/index.html
@@ -158,7 +158,9 @@
         <li><a href="mailto:mikekivikoski@gmail.com">Email &mdash; mikekivikoski@gmail.com</a></li>
       </ul>
 
-      <p>I used to own mikekivikoski.com, but let it lapse and it got scooped up by some random company 🤦‍♂️. Thus, mkivikoski.com
+      <p>I used to own mikekivikoski.com, but let it lapse and it got scooped up by some random company 🤦‍♂️. Thus, mkivikoski.com</p>
+
+      <p><a href="https://github.com/mkivikoski/mkivikoski">Issues and PRs welcome</a></p>
     </footer>
   </main>
 </body>
