update typography styles and layout of top section to look nice and flow better

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <title>Mike Kivikoski</title>
 
-  <link href="https://fonts.googleapis.com/css?family=Merriweather" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Merriweather:300,400,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:200,400,600" rel="stylesheet">
   <link rel="stylesheet" href="./assets/css/main.css">
   <link rel="icon" href="ted-excellent.gif">
@@ -17,46 +17,67 @@
 <body class="kivikoski-says-hello-👋">
 
   <header class="who-are-you-🐛">
+
     <h6 class="who-are-you-🐛__say-hi">
-      Hi! 👋
+       👋 Hi, I&rsquo;m
       <span class="who-are-you-🐛__your-name-please">
-        I&rsquo;m Mike Kivikoski
+         Mike Kivikoski!
       </span>
     </h6>
+
+    <h1 class="headline--main">
+      <span class="headline--main-sub">A Product Designer and Developer</span>
+      focusing on easy to use, device agnostic, and accessible experiences.
+    </h1>
   </header>
 
   <main>
     <section class="quick-summary-🎉">
-      <h1 class="headline--main">
-        Focusing on easy to use, device agnostic, accessible experiences.
-      </h1>
+      <div class="picture">
+        picture placeholder
+      </div>
 
-      <h2 class="headline--major">
-        With a formal background in design, and 11 years of work experience in development, I help create and connect the dots from <b>Problem identification</b> through <b>User Research</b>, <b>Interviews</b>, <b>Testing</b>, <b>UX Flows</b>, <b>Visual Design</b>, <b>UI development</b> and <b>Code integration</b>.
-        I&rsquo;ve been fortunate enough to work on multi-million dollar projects, speak at conferences around the States, and have seen dozens of products I&rsquo;ve worked on get shipped to literally millions of users.🚢
-      </h2>
+      <div class="quick-summary-🎉__content">
+        <header class="quick-summary-🎉__headline">
+          <h5 class="headline--minor">
+            Background
+          </h5>
+          <h2 class="headline--major">
+            With a formal background in design, and 11 years of work experience in development, I help create and connect the dots from <b>Problem Identification</b>, <b>User Research</b>, <b>Interviews</b>, <b>Testing</b>, and <b>UX Flows</b>, through <b>Visual Design</b>, <b>UI Development</b> and <b>Code Integration</b>.
+          </h2>
 
-      <p>
-        I&rsquo;ve worked remote for the past few years, while being full time employed at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, so Slack and I are old pals.
-        Gifs, puns and emojis &mdash; especially animated ones take from clips of &lsquo;90s movies &mdash; are my favorite (peep Ted in the favicon if your browser supports it). I&rsquo;ve got my own private office space in my house in New Hampshire and use a Jarvis standing desk daily, paired with a 27" monitor.
-      </p>
+          <h2 class="headline--major">
+            I&rsquo;ve been fortunate enough to work on projects with <b>budgets in the seven figures</b>, <b>speak at conferences</b> around the States, and have had my work shipped to literally <b>millions of users</b>.🚢
+          </h2>
+        </header>
 
-      <p>
-         Prior to Cantina, I spent 5 years running my own lil&rsquo; consulting shop out of a collective workspace in Somerville, MA. Communication and transparency are two skills I learned over that time, and ones that I treasure.
-      </p>
+        <div>
+          <p>
+            I am currently a Senior Designer at <a href="https://cantina.co/" title="Cantina, a digital consulting agency in Boston">Cantina</a>, a digital consulting agency in Boston, MA; but I live in New Hampshire and work remotely. Slack, Zoom, and Gmail are everyday tools, along with gifs, puns and emojis. 🤗  I&rsquo;ve got private office space in our house and use a Jarvis standing desk daily, paired with a 27" monitor and Baron, the 8 year old Great Dane.
+          </p>
 
-      <p>
-        A few years ago, I was given the opportunity to release a video series with O&rsquo;Reilly Media, &ldquo;<a href="http://shop.oreilly.com/product/0636920035251.do" title="">UI Development for Engineers</a>&rdquo;, that gives a quick introduction to design and front end development to developers unfamiliar with those concepts &mdash; and it is still being purchased to this day.
-      </p>
+          <p>
+             Prior to Cantina, I spent 5 years running my own consulting studio, Atedrake, out of a collective workspace in Somerville, MA. Projects ranged from UX and Visual Design, to static UI, WordPress and Shopify development. Clients consisted of small local businesses, and larger agencies needing assistance with their clients.
+          </p>
+        </div>
 
-      <p>
-        I&rsquo;ve also taught at the college level, teaching, Introduction to Web Design, Introduction to Web Development, and Advanced Web Development, at Endicott College, my alma mater, during the 2012 &dash; 2014 in Beverly, MA.
-      </p>
+        <div>
+          <p>
+            At the end of 2014, I had the opportunity to create an instructional video with O&rsquo;Reilly Media, &ldquo;<a href="http://shop.oreilly.com/product/0636920035251.do" title="">UI Development for Engineers</a>&rdquo;, that gives an introduction and overview to design and front-end development to developers unfamiliar with those concepts.
+          </p>
+
+          <p>
+            I&rsquo;ve also taught at the college level, teaching, <i>Introduction to Web Design</i>, <i>Introduction to Web Development</i>, and <i>Advanced Web Development</i>, at Endicott College, my alma mater, during the 2012 &dash; 2014 semesters in Beverly, MA.
+          </p>
+
+          <section class="notification-📬">
+            <p>Want to chat? I&rsquo;d love to hear from you! Send me an email 📬, <a href="mailto:mikekivikoski@gmail.com" title="Email Mike">mikekivikoski@gmail.com</a> and we&rsquo;ll setup a Zoom.</p>
+          </section>
+        </div>
+      </div>
     </section>
 
-    <section class="notification-📬">
-      Want to chat? I&rsquo;d love to hear from you, so send me an email 📬, <a href="mailto:mikekivikoski@gmail.com" title="Email Mike">mikekivikoski@gmail.com</a> and we can setup a zoom.
-    </section>
+
 
     <section>
       <h3>Work</h3>
