--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
 
 
 
-    <section>
-      <h3>Work</h3>
-      <p>I&rsquo;ve been fortunate to have worked on projects with user bases greater than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions. </p>
+    <section class="work-💻">
+      <h5 class="headline--minor">Work</h5>
+      <h3 class="headline--major">I&rsquo;ve been fortunate to have worked on projects with user bases greater than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions; while being humbled to have worked with dozens of small companies whom have trusted me with their digital presence. </h3>
 
-      <div class="what-mike-likes-👨‍💻 grid--three-column">
+      <div class="what-mike-likes-👨‍💻">
         <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-good-at">
-          <h4>What I&rsquo;m good at and enjoy</h4>
-          <ul>
+          <h4 class="what-mike-likes-👨‍💻__headline">👍 What I&rsquo;m good at and enjoy</h4>
+          <ul class="what-mike-likes-👨‍💻__list">
             <li>User and Project Research</li>
             <li>User Interviews</li>
             <li>User Flows</li>
             <li>Design Sprints</li>
             <li>Visual design</li>
             <li>Design systems</li>
-            <li>HTML, CSS / Sass (prototype and production)</li>
+            <li>HTML, CSS / Sass</li>
             <li>CSS architecture</li>
             <li>Accessibility</li>
             <li>Performance</li>
@@ -102,23 +102,24 @@
         </div>
 
         <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-okay-at">
-          <h4>What I can sorta do/kind of understand</h4>
-          <ul>
+          <h4 class="what-mike-likes-👨‍💻__headline">👌 What I have working knowledge of</h4>
+          <ul class="what-mike-likes-👨‍💻__list">
             <li>Presentational JavaScript</li>
             <li>Build systems (webpack, gulp)</li>
             <li>npm modules</li>
             <li>CRUD</li>
-            <li>e2e and unit tests</li>
+            <li>e2e tests</li>
             <li>Content writing</li>
           </ul>
         </div>
 
         <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-bad-at">
-          <h4>What you don&rsquo;t want me doing</h4>
-          <ul>
-            <li>Writing Middleware or lots of JavaScript from scratch</li>
+          <h4 class="what-mike-likes-👨‍💻__headline">👎 What you don&rsquo;t want me doing</h4>
+          <ul class="what-mike-likes-👨‍💻__list">
+            <li>Writing Middleware</li>
+            <li>Only JavaScript</li>
             <li>Writing backend logic</li>
-            <li>Architecting anything beyond the CSS architecture</li>
+            <li>Architecting anything beyond CSS</li>
           </ul>
         </div>
       </div>
