style the talk/media section

--- a/index.html
+++ b/index.html
@@ -128,20 +128,54 @@
 
     </section>
 
-    <section>
+    <section class="mike-talks-🎤">
       <h3>Selected talks, workshops, podcasts and media</h3>
-      <ul class="mike-talks-🎤 grid--three-column">
-        <li><a href="http://shop.oreilly.com/product/0636920035251.do" title="">O&rsquo;Reilly books, &ldquo;UI Introduction for Engineers&rdquo;</a> </li>
-        <li><a href="https://www.youtube.com/watch?v=Sm_60YPrPzk" title="">Cantina Workshop: Legitimizing Design Thinking in Large Organizations</a></li>
-        <li><a href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="">CascadiaJS &mdash; CSS Pseudo</a> (<a href="https://speakerdeck.com/mkivikoski/css-pseudo" title="View the slides on speakerdeck.com for CSS Pseudo">Slides</a>)</li>
-        <li><a href="https://html5devconf.com/speakers/mike_kivikoski.html" title="">HTML5 Developer Conference &mdash; Evolving Web Applications with Module Components</a></li>
-        <li><a href="https://creativetechweek2016.sched.com/speaker/mike_kivikoski.1uoz3m3j" title="">NYC Creative Tech Week  &mdash; Evolving Web Applications with Module Components</a></li>
-        <li><a href="https://www.youtube.com/watch?v=rPDJcQGrKIg" title="">BostonCSS &mdash; CSS Pseudo</a> </li>
-        <li><a href="http://greatwideopen.org/speakers/mike-kivikoski/" title="">Great Wide Open &mdash; Evolving Web Applications with Module Components</a></li>
-        <li><a href="https://www.youtube.com/watch?v=ev3AtyAlwIQ" title="">Full Stack Toronto &mdash; Evolving Web Applications with Module Components</a></li>
-        <li><a href="https://www.meetup.com/fullstacknh/events/223108477/?_cookie-check=zzTo2tS-Gm06k7eu" title="">Full Stack NH &mdash; Design in the browser</a></li>
-        <li><a href="https://vimeo.com/41222601" title="">Creative Mornings &mdash; Taking the plunge, quit your job for self employment</a></li>
-        <li><a href="https://www.youtube.com/watch?v=VHs7n4xFO4w" title="">Boston Ignite &mdash; Taking the plunge, quit your job for self employment</a></li>
+      <ul class="mike-talks-🎤__list">
+
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">Cantina Workshop &mdash; Boston, MA, August 2017</h5>
+          <a href="https://www.youtube.com/watch?v=Sm_60YPrPzk" title="" class="headline--major">Legitimizing Design Thinking in Large Organizations</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">CascadiaJS &mdash; Seattle, WA, August 2016</h5>
+          <a href="https://www.youtube.com/watch?v=IMJ3fw4JqPI" title="" class="headline--major">CSS Pseudo</a> (<a href="https://speakerdeck.com/mkivikoski/css-pseudo" title="View the slides on speakerdeck.com for CSS Pseudo">Slides</a>)
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">BostonCSS &mdash; Boston, MA, June 2016</h5>
+          <a href="https://www.youtube.com/watch?v=rPDJcQGrKIg" title="" class="headline--major">CSS Pseudo</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">NYC Creative Tech Week &mdash; New York City, May 2016</h5>
+          <a href="https://creativetechweek2016.sched.com/speaker/mike_kivikoski.1uoz3m3j" title="" class="headline--major">Evolving Web Applications with Module Components</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">Great Wide Open &mdash; Atlanta, GA, March 2016</h5>
+          <a href="http://greatwideopen.org/speakers/mike-kivikoski/" title="" class="headline--major">Evolving Web Applications with Module Components</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">Full Stack Toronto &mdash; Toronto, ON, Canada, November 2015</h5>
+          <a href="https://www.youtube.com/watch?v=ev3AtyAlwIQ" title="" class="headline--major"> Evolving Web Applications with Module Components</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">HTML5 Developer Conference &mdash; San Francisco, October 2015</h5>
+          <a href="https://html5devconf.com/speakers/mike_kivikoski.html" title="" class="headline--major">Evolving Web Applications with Module Components</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">Full Stack NH &mdash; Portsmouth, NH, June 2015</h5>
+          <a href="https://www.meetup.com/fullstacknh/events/223108477/?_cookie-check=zzTo2tS-Gm06k7eu" title="" class="headline--major">Design in the browser</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">O&rsquo;Reilly media &mdash; October, 2014</h5>
+          <a href="http://shop.oreilly.com/product/0636920035251.do" title="" class="headline--major">UI Introduction for Engineers</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">Creative Mornings &mdash; Boston, MA, March 2012</h5>
+          <a href="https://vimeo.com/41222601" title="" class="headline--major">Taking the plunge, quit your job for self employment</a>
+        </li>
+        <li class="mike-talks-🎤__talk">
+          <h5 class="headline--minor">Boston Ignite &mdash; Boston, MA, April 2012</h5>
+          <a href="https://www.youtube.com/watch?v=VHs7n4xFO4w" title="" class="headline--major">Taking the plunge, quit your job for self employment</a>
+        </li>
       </ul>
 
       <p>I occasionally post podcasts for Design, Build, Test, Repeat at <a href="http://dbtr.fm" title="Design, Build, Test, Repeat podcast">dbtr.fm</a></p>
