styling work section with notification and interior border

--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
             I&rsquo;ve also taught at the college level, teaching, <i>Introduction to Web Design</i>, <i>Introduction to Web Development</i>, and <i>Advanced Web Development</i>, at Endicott College, my alma mater, during the 2012 &dash; 2014 semesters in Beverly, MA.
           </p>
 
-          <section class="notification-📬">
-            <p>Want to chat? I&rsquo;d love to hear from you! Send me an email 📬, <a href="mailto:mikekivikoski@gmail.com" title="Email Mike">mikekivikoski@gmail.com</a> and we&rsquo;ll setup a Zoom.</p>
-          </section>
+          <p>Want to chat? I&rsquo;d love to hear from you! Send me an email 📬, <a href="mailto:mikekivikoski@gmail.com" title="Email Mike">mikekivikoski@gmail.com</a> and we&rsquo;ll setup a Zoom.</p>
         </div>
       </div>
     </section>
@@ -124,7 +122,9 @@
         </div>
       </div>
 
-      <p>While I work in the front-end/user interface of products, I have experience working within applications written in various languages and frameworks. Including, in no particular order: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
+      <div class="notification-📬">
+        <p>While I work in the front-end/user interface of products, I have experience working within applications written in various languages and frameworks. Including, in no particular order: JavaScript, Node, Angular, Python, PHP, WordPress, Shopify, and Ruby on Rails.</p>
+      </div>
 
     </section>
 
