add headshot photo

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <main>
     <section class="quick-summary-🎉">
       <div class="picture">
-        picture placeholder
+        <img src="assets/images/kivikoski-headshot.jpeg" alt="Mike Kivikoski Headshot" class="headshot"/>
       </div>
 
       <div class="quick-summary-🎉__content">
