style articles section with category lists

--- a/index.html
+++ b/index.html
@@ -182,22 +182,38 @@
     </section>
 
 
-    <section>
+    <section class="articles-✏️">
       <h3>Articles and thoughts</h3>
-      <ul class="grid--three-column">
-        <li><a href="https://cantina.co/design-first-thinking-in-large-organizations/" title="">Design First thinking in Large Organizations</a></li>
-        <li><a href="https://cantina.co/organizational-buy-in-on-responsive-design/" title="">Organizational Buy In On Responsive Design</a></li>
-        <li><a href="https://cantina.co/modular-css-atomic-design-in-the-enterprise/" title="">modular-css-atomic-design-in-the-enterprise</a></li>
-        <li><a href="https://cantina.co/delivering-responsive-at-scale/" title="">delivering-responsive-at-scale</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/lets-make-user-testing-even-easier-b828d354fe81" title="">Let’s make user testing even easier</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/dark-patterns-ruin-great-services-b81aae4b081b" title="">Dark Patterns Ruin Great Services</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/creating-a-podcast-f8d6b1057c8c" title="">Creating a Podcast</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/abc-always-be-continuous-integration-d3a3cb4da419" title="">Abc – Always Be Continuous integration</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/laying-out-the-foundation-on-a-new-project-d4d76a6c93a3" title="">Laying the foundation for a new project</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/an-easier-way-to-find-users-for-user-testing-on-new-products-e2491d0bfdaf" title="">An easier way to find users for user testing</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/spend-1-save-99-3ecc3703f6e2" title="">Spend $1, Save $99</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/failure-30e09cc3f357" title="">Failure</a></li>
-        <li><a href="https://medium.com/@mikekivikoski/ideal-employment-2b2c61c626eb" title="">Ideal Employment</a></li>
+      <ul>
+        <li class="articles-✏️__categories">
+          <h5 class="headline--minor">Design</h5>
+          <ul>
+            <li><a href="https://cantina.co/design-first-thinking-in-large-organizations/" title="" class="headline--major">Design First Thinking in Large Organizations</a></li>
+            <li><a href="https://cantina.co/organizational-buy-in-on-responsive-design/" title="" class="headline--major">Organizational Buy In On Responsive Design</a></li>
+            <li><a href="https://medium.com/@mikekivikoski/an-easier-way-to-find-users-for-user-testing-on-new-products-e2491d0bfdaf" title="" class="headline--major">An easier way to find users for user testing</a></li>
+            <li><a href="https://medium.com/@mikekivikoski/lets-make-user-testing-even-easier-b828d354fe81" title="" class="headline--major">Let&rsquo;s Make User Testing Even Easier</a></li>
+            <li><a href="https://medium.com/@mikekivikoski/dark-patterns-ruin-great-services-b81aae4b081b" title="" class="headline--major">Dark Patterns Ruin Great Services</a></li>
+            <li><a href="https://medium.com/@mikekivikoski/spend-1-save-99-3ecc3703f6e2" title="" class="headline--major">Spend $1, Save $99</a></li>
+          </ul>
+        </li>
+        <li class="articles-✏️__categories">
+          <h5 class="headline--minor">Development</h5>
+          <ul>
+            <li><a href="https://cantina.co/modular-css-atomic-design-in-the-enterprise/" title="" class="headline--major">Modular CSS: Atomic Design in the Enterprise</a></li>
+            <li><a href="https://medium.com/@mikekivikoski/abc-always-be-continuous-integration-d3a3cb4da419" title="" class="headline--major">ABC &mdash; Always Be Continuous integration</a></li>
+            <li><a href="https://medium.com/@mikekivikoski/laying-out-the-foundation-on-a-new-project-d4d76a6c93a3" title="" class="headline--major">Laying the foundation for a new project</a></li>
+            <li><a href="https://cantina.co/delivering-responsive-at-scale/" title="" class="headline--major">Delivering Responsive at Scale</a></li>
+          </ul>
+        </li>
+
+        <li class="articles-✏️__categories">
+          <h5 class="headline--minor">Misc.</h5>
+          <ul>
+            <li><a href="https://medium.com/@mikekivikoski/failure-30e09cc3f357" title="" class="headline--major">Failure</a></li>
+            <li><a href="https://medium.com/@mikekivikoski/ideal-employment-2b2c61c626eb" title="" class="headline--major">Ideal Employment</a></li>
+            <li><a href="https://medium.com/@mikekivikoski/creating-a-podcast-f8d6b1057c8c" title="" class="headline--major">Creating a Podcast</a></li>
+          </ul>
+        </li>
       </ul>
     </section>
 
