add notification callouts, update github link

--- a/index.html
+++ b/index.html
@@ -178,7 +178,9 @@
         </li>
       </ul>
 
-      <p>I occasionally post podcasts for Design, Build, Test, Repeat at <a href="http://dbtr.fm" title="Design, Build, Test, Repeat podcast">dbtr.fm</a></p>
+      <div class="notification-📬">
+        <p>I occasionally post podcasts for Design, Build, Test, Repeat at <a href="http://dbtr.fm" title="Design, Build, Test, Repeat podcast">dbtr.fm</a></p>
+      </div>
     </section>
 
 
@@ -217,12 +219,12 @@
       </ul>
     </section>
 
-    <section class="footnote">
-      <p>My second child 👨‍👩‍👦‍👦  was born in early 2016, and time outside of work has been used for family time. This is why you&rsquo;ll notice a decrease in my writing and speaking content since then.</p>
+    <section class="notification-📬">
+      <p>My second child  was born in early 2016, and time outside of work has been used for family time. This is why you&rsquo;ll notice a decrease in my writing and speaking content since then. 👨‍👩‍👦‍👦 </p>
     </section>
 
     <footer>
-      <h3>Get in touch, or follow me, or whatevers</h3>
+      <h3>Get in touch</h3>
       <ul>
         <li><a href="https://twitter.com/mkivikoski">Twitter &mdash; @mkivikoski</a></li>
         <li><a href="https://github.com/mkivikoski/">Github &mdash; mkivikoski</a></li>
@@ -232,7 +234,7 @@
 
       <p>I used to own mikekivikoski.com, but let it lapse and it got scooped up by some random company 🤦‍♂️. Thus, mkivikoski.com</p>
 
-      <p><a href="https://github.com/mkivikoski/mkivikoski">Issues and PRs welcome</a></p>
+      <p><a href="https://github.com/mkivikoski/mkivikoski">Issues and PRs welcome, or just look at the history of the site and it&rsquo;s design process.</a></p>
     </footer>
   </main>
 </body>
