modify work section by removing skills boxes, and adding summary of past notable work

--- a/index.html
+++ b/index.html
@@ -79,45 +79,33 @@
 
     <section class="work-💻">
       <h5 class="headline--minor">Work</h5>
-      <h3 class="headline--major">I&rsquo;ve been fortunate to have worked on projects with user bases greater than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions; while being humbled to have worked with dozens of small companies whom have trusted me with their digital presence. </h3>
+      <h3 class="headline--major">Worked on projects with user bases greater than 7 million, IPOs with tens of millions on the table, and companies with gross revenue in the billions; while being humbled to have worked with dozens of small companies whom have trusted me with their digital presence. </h3>
+
+      <p>I&rsquo;ve helped create and build
+        <a href="https://participant.empower-retirement.com/participant/#/login" title="Empower, 401k Retirement plan">Empower&rsquo;s</a> user interface and accessibility updates.
+        <a href="https://www.connection.com/" title="Connection, a physical product IT company">Connection&rsquo;s</a> checkout flow with user interviews, flows and designs.
+        <a href="https://www.taskrabbit.com/" title="TaskRabbit, online marketplace for local labor">TaskRabbit&rsquo;s</a> task creation from when they were transitioning from RunMyErrands</a>.
+        The prototype form for registering new users for the <a href="https://www.goinvo.com/enterprise/dnc/" title="Involution case study on the DNC project"> Democratic National Committee</a>.
+         Developing the responsive experience for <a href="https://www.quoddy.com/">Quoddy</a> on Shopify, and a
+        responsive redesign built on WordPress for <a href="https://www.centralsquaretheater.org/">Central Square Theater</a>.</p>
 
       <div class="what-mike-likes-👨‍💻">
         <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-good-at">
-          <h4 class="what-mike-likes-👨‍💻__headline">👍 What I&rsquo;m good at and enjoy</h4>
+          <h4 class="what-mike-likes-👨‍💻__headline">
+            Areas I work in
+          </h4>
           <ul class="what-mike-likes-👨‍💻__list">
-            <li>User and Project Research</li>
-            <li>User Interviews</li>
-            <li>User Flows</li>
-            <li>Design Sprints</li>
-            <li>Visual design</li>
-            <li>Design systems</li>
-            <li>HTML, CSS / Sass</li>
-            <li>CSS architecture</li>
-            <li>Accessibility</li>
-            <li>Performance</li>
-            <li>Typography</li>
-          </ul>
-        </div>
-
-        <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-okay-at">
-          <h4 class="what-mike-likes-👨‍💻__headline">👌 What I have working knowledge of</h4>
-          <ul class="what-mike-likes-👨‍💻__list">
-            <li>Presentational JavaScript</li>
-            <li>Build systems (webpack, gulp)</li>
-            <li>npm modules</li>
-            <li>CRUD</li>
-            <li>e2e tests</li>
-            <li>Content writing</li>
-          </ul>
-        </div>
-
-        <div class="what-mike-likes-👨‍💻__example what-mike-likes-👨‍💻__example--is-bad-at">
-          <h4 class="what-mike-likes-👨‍💻__headline">👎 What you don&rsquo;t want me doing</h4>
-          <ul class="what-mike-likes-👨‍💻__list">
-            <li>Writing Middleware</li>
-            <li>Only JavaScript</li>
-            <li>Writing backend logic</li>
-            <li>Architecting anything beyond CSS</li>
+            <li class="what-mike-likes-👨‍💻__item">User and Project Research</li>
+            <li class="what-mike-likes-👨‍💻__item">User Interviews</li>
+            <li class="what-mike-likes-👨‍💻__item">User Flows</li>
+            <li class="what-mike-likes-👨‍💻__item">Design Sprints</li>
+            <li class="what-mike-likes-👨‍💻__item">Visual Design</li>
+            <li class="what-mike-likes-👨‍💻__item">Design Systems</li>
+            <li class="what-mike-likes-👨‍💻__item">HTML, CSS / Sass</li>
+            <li class="what-mike-likes-👨‍💻__item">CSS Architecture</li>
+            <li class="what-mike-likes-👨‍💻__item">Accessibility</li>
+            <li class="what-mike-likes-👨‍💻__item">Performance</li>
+            <li class="what-mike-likes-👨‍💻__item">Typography</li>
           </ul>
         </div>
       </div>
